# cafeHop

./: .dockerignore  .gitignore  .gitignore.bak  DEPLOYMENT_FIX.md  FIX_GIT_ERROR.md  QUICK_SETUP.md  README.md  SETUP_CONFIG.md  TROUBLESHOOT_CONFIG.md  add.html  app-config.js  cafes.json  config.js  docker-compose.yml  gtfs_precomputed.pkl  imageUpload.py  index.html  map.html  pyproject.toml  requirements.txt  station_information_rel.json
.github/workflows/: deploy.yml
data/: cafes.sample.json
docs/: add.html  api-config.example.js  api-config.js  index.html  map.html
docsu/: localstack.md  terraform-import-auth.md  terraform-import-cafe.md  terraform-import-image.md
function/: Untitled-1.ipynb  generate_s3_url_lambda_function.py  lambda_function.py  requirements.txt  sharecard_service.py  updated_lambda_function.py  utils.py
legacy/lambda/: citibike_service.py  elo_ranking.py  simple_auth_lambda_function.py  utils.py
scripts/: deploy_cafe_and_image_lambdas.sh  dev_local.sh  docker_push_lambda_auth.sh  docker_push_lambda_cafe.sh  docker_push_lambda_cafe_and_image.sh  docker_push_lambda_image.sh  load_cafes_to_dynamodb.py  localstack_setup_resources.sh
services/auth/: Dockerfile  README.md  lambda_function.py
services/cafe/: Dockerfile  Dockerfile.lambda  citibike_stations.py  db.py  elo.py  enrichment.py  geocoding.py  gtfs_precomputed.json  main.py  models.py  ranking.py  sharecard_service.py
services/image/: Dockerfile  Dockerfile.lambda  main.py  processing.py
templates/: share_cards.py
terraform/: dynamodb.tf  main.tf  moved.tf  outputs.tf  variables.tf  versions.tf
terraform/auth/: main.tf  outputs.tf  variables.tf
terraform/cafe/: main.tf  outputs.tf  variables.tf
terraform/image/: main.tf  outputs.tf  variables.tf
web/: add.html  api-config.js
